# Lenscast

./: .gitignore  CLAUDE.md  README.md  SECURITY.md  TODO.md  gradle.properties  settings.gradle.kts
Docs/: API.md  Architecture.md  Build.md  FEATURES.md  OBS-Integration.md  Protocol-Testing.md  Roadmap.md  TODO.md  USB.md  Webcam.md
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/kotlin/dev/lenscast/: LenscastApp.kt  MainActivity.kt
app/src/main/kotlin/dev/lenscast/camera/: CameraCapabilities.kt  CameraController.kt  YuvToJpeg.kt
app/src/main/kotlin/dev/lenscast/net/: NetworkUtils.kt  NsdAdvertiser.kt  TlsManager.kt
app/src/main/kotlin/dev/lenscast/prefs/: Settings.kt  SettingsCodec.kt  SettingsRepository.kt
app/src/main/kotlin/dev/lenscast/streaming/: AudioBroadcaster.kt  FrameBroadcaster.kt  MjpegServer.kt  PcmCapture.kt  RecordingMuxer.kt  RtspManager.kt  StreamingService.kt  WebControlServer.kt
app/src/main/kotlin/dev/lenscast/streaming/rtsp/: AacEncoder.kt  GlRotationPipeline.kt  H264Encoder.kt  Rtcp.kt  RtpPacketizers.kt  RtspCameraDriver.kt  RtspServer.kt  Sdp.kt
app/src/main/kotlin/dev/lenscast/system/: BootReceiver.kt  StreamingTileService.kt  SystemWebcam.kt  TelephonyMonitor.kt
app/src/main/kotlin/dev/lenscast/ui/: MainScreen.kt  SettingsSheet.kt
app/src/main/kotlin/dev/lenscast/ui/theme/: Color.kt  (+2 more)
app/src/main/kotlin/guru/freberg/lenscast/: LenscastApp.kt  MainActivity.kt
app/src/main/res/drawable/: ic_launcher_foreground.xml  ic_notification.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-nb/: strings.xml
app/src/main/res/xml/: file_paths.xml
gradle/: libs.versions.toml
obs/lenscast-control/: CMakeLists.txt  README.md
obs/lenscast-control/data/locale/: en-US.ini
obs/lenscast-control/src/: lenscast-client.cpp  lenscast-client.hpp  lenscast-dock.cpp  lenscast-dock.hpp  plugin-main.cpp
pc/: 99-v4l2loopback-capture.rules  PipeWire.md  README.md  lenscast-virtualcam  lenscast-virtualcam-gui
tools/: README.md  lenscast-rtsp-probe
(+66 files in other folders)
